--- a/src/routes/Home/components/SearchBar/Search.scss
+++ b/src/routes/Home/components/SearchBar/Search.scss
@@ -10,23 +10,48 @@
   h3 {
 
     letter-spacing: .03em;
+    margin-bottom: 30px;
+    text-align: center;
+    line-height: 2em;
+  }
+  span {
+    padding: 3px 1px;
+  }
+  .red {
+    color: #e74c3c;
+  }
+  .blue {
+    color: #3498db;
+  }
+  .orange {
+    color: #e67e22;
+  }
+  .green {
+    color: #2ecc71;
   }
 }
 .search-field__form {
   width: 50%;
+
   display: flex;
+  justify-content: center;
   min-width: 300px;
 
   input {
     outline: 0;
     border: 1px solid #e0e0e0;
     border-top-left-radius: 20px;
+    transition: width 0.4s ease-in-out;
 
-    width: 90%;
+
+
+    width: 70%;
     padding: 15px;
 
-  &:active, &:focus {
+    &:focus {
       outline: 0;
+      width: 90%;
+      box-shadow:inset 1px 1px 1px 0px rgba(0, 0, 0, .1);
     }
   }
 
@@ -37,9 +62,21 @@
     border: 0;
     font-size: 1.6em;
     color: #fff;
+    transition: all .1s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+      color: #000;
+      background-color: #fff;
+      border: 1px solid black;
+    }
 
     &:active, &:focus {
         outline: 0;
       }
+    &:active {
+        transform: translateX(4px);
+      }
+
     }
 }
