--- a/src/routes/Form/containers/Contact.scss
+++ b/src/routes/Form/containers/Contact.scss
@@ -6,6 +6,10 @@
   background-size: cover;
   position: relative;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 
 
 
@@ -70,6 +74,21 @@
   margin: 30px auto;
   height: 140px;
   width: 140px;
+
+}
+
+.success {
+  border: 2px solid #000;
+  background: rgba(255,255,255, 1 );
+  padding: 20px;
+  transition: all 1s ease-in;
+  letter-spacing: .05em;
+  font-size: 1.2em;
+  line-height: 1.8em;
+  display: inline-block;
+  min-width: 250px;
+  margin: 4px;
+  text-align: center;
 
 }
 
